--- a/day1/day1.html
+++ b/day1/day1.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<title>Adarsh</title>
+<body bgcolor="pink">
+   <p> <h1>About me</h1><br>
+    <h2>BE/ECE</h2><br>
+    <h3>KGiSL insitute of technology</h3><br>
+    <h4>full stack</h4><br>
+    <h5>KGiSL micro collage</h5><br>
+    <h6>leadership</h6></p>
+     <img src="C:\Users\ADHARSH\OneDrive\Desktop\KGM\50516.jpg" height="200px" width="400px" alt="no image">
+     <h4>Adarsh G</h4>
+
+
     
 </body>
 </html>
