--- a/day1/assesment6.html
+++ b/day1/assesment6.html
@@ -5,8 +5,10 @@
     <title>assesment</title>
 </head>
 <body>
-    <img src="adarsh photo.png" height="400px" width="400"><br>
-    <caption>ADARSH G</caption>
+    <figure>
+    <img src="adarsh photo.png" height="400px" width="400">
+    <figcaption>ADARSH G</figcaption>
+</figure>
 
     
 </body>
