--- a/DAY4/assessment4_6.html
+++ b/DAY4/assessment4_6.html
@@ -19,7 +19,8 @@
             <tr>
                 <td><label>DATE OF BIRTH</label></td>
                 <td><select>
-                    <option value="date">Day:</option>
+                    <option value="date">day</option>
+                    <option value="date">1</option>
                 </select>
                 <select>
                     <option value="month">Month:</option>
@@ -80,7 +81,7 @@
                     <th><label>Percentage</label></th>
                     <th><label>Year of Passing</label></th>
                 </tr>
-                <tr>
+                <tr> 
                     <td rowspan="5"></td>
                     <td>1</td>
                     <td>Class X</td>
